--- a/TravelPics.UI/src/app/shared/map/map.component.html
+++ b/TravelPics.UI/src/app/shared/map/map.component.html
@@ -10,11 +10,11 @@
                         <p-galleria [value]="marker.photos" [showItemNavigatorsOnHover]="true" [showItemNavigators]="marker.photos.length > 1 ? true : false" [showThumbnails]="false"  
                             [containerStyle]="{'max-height': '400px' }">
                             <ng-template pTemplate="item" let-item>
-                                    <img class="cursor-pointer" (click)="navigateToPosts(marker.posts)" [src]="getImageUrl(item.content, item.fileName)" alt="{{item.fileName}}" style="width: 200px; display: block; height:auto;" />
+                                    <img  [src]="getImageUrl(item.content, item.fileName)" alt="{{item.fileName}}" style="width: 200px; display: block; height:auto;" />
                             </ng-template>
                             <ng-template  pTemplate="thumbnail" let-item>
                             <div  class="grid grid-nogutter justify-content-center">
-                                <img class="cursor-pointer" (click)="navigateToPosts(marker.posts)" [src]="getImageUrl(item.content, item.fileName)" alt="{{item.fileName}}" style="width: 200px; display: block; height:auto;" />
+                                <img  [src]="getImageUrl(item.content, item.fileName)" alt="{{item.fileName}}" style="width: 200px; display: block; height:auto;" />
                             </div>
                             </ng-template>
                         </p-galleria>
