--- a/TravelPics.UI/src/styles/primeng-overwrites/menubar.scss
+++ b/TravelPics.UI/src/styles/primeng-overwrites/menubar.scss
@@ -23,7 +23,7 @@
         height: $menuBarHeight;
         display: flex;
         flex-direction: row;
-        justify-content: center;
+        justify-content: start;
         align-items: center;
         width: calc(#{$brandLogoWidth} + #{$brandLogoWidth});
     }
