Route to post by id

--- a/TravelPics.UI/src/app/menu/menubar/menubar.component.scss
+++ b/TravelPics.UI/src/app/menu/menubar/menubar.component.scss
@@ -10,6 +10,10 @@
     background-color: white;
 }
 
+.notif-read:hover{
+    background-color: var(--surface-300);
+}
+
 .notif-unread{
     background-color: var(--surface-200);
 }
