--- a/TravelPics.UI/src/app/menu/menubar/menubar.component.html
+++ b/TravelPics.UI/src/app/menu/menubar/menubar.component.html
@@ -1,4 +1,4 @@
-<p-menubar [model]="items" class="main-menu" >
+<p-menubar [model]="items" class="main-menu">
     <ng-template pTemplate="start" style="height:70px;" class="mr-8">
         <img (click)="goToMainPage()" src="../../../assets/travelpics-logo.png" class="brand-logo" alt="TravelPics logo">
         <p-autoComplete [disabled]="!isUserLoggedIn" [(ngModel)]="searchKeyword" [suggestions]="results" (completeMethod)="search($event)" 
@@ -31,10 +31,10 @@
 
 <p-overlayPanel #notificationPanel [showCloseIcon]="true" (onShow)="readNotifications()">
     <ng-template pTemplate="content">
-        <travelpics-loader class="mt-4 mb-4" [isLoading]="newNotifications.length == 0" [loadingMessage]="'Retrieving notifications'"></travelpics-loader>
-        <div *ngFor="let notif of newNotifications" class="w-12 flex align-items-center justify-content-start mt-0 mb-0" 
+        <travelpics-loader class="mt-4 mb-4" [isLoading]="newNotifications.length == 0" [loadingMessage]="'No notifications yet. Waiting...'"></travelpics-loader>
+        <div *ngFor="let notif of newNotifications" class=" w-12 flex align-items-center justify-content-start mt-0 mb-0" 
             [ngClass]="isNotificationRead(notif) ? 'notif-read' : 'notif-unread'" style="border-bottom: 1px solid var(--surface-300);">
-            <div class="mb-2 mr-1 ml-4 mt-2 flex align-items-center justify-content-start">
+            <div (click)="goToPost(notif.notificationLog.postId)" class="notif-item cursor-pointer mb-2 mr-1 ml-4 mt-2 flex align-items-center justify-content-start">
                 <img *ngIf="notif.notificationLog.sender == null || notif.notificationLog.sender.profileImage == null" class="border-circle" style="width:50px; height:50px;" src="../../../assets/images/avatar.png" alt="avatar">
                 <img *ngIf="!!notif.notificationLog.sender && !!notif.notificationLog.sender.profileImage" class="border-circle" [src]="getImageUrl(notif.notificationLog.sender.profileImage.content,notif.notificationLog.sender.profileImage.fileName)" alt="avatar" style="width:50px; height:50px;">
                 <span class="ml-2">{{notif.subject}}</span>
