--- a/TravelPics.UI/src/app/user/register/register.component.scss
+++ b/TravelPics.UI/src/app/user/register/register.component.scss
@@ -1,23 +1,53 @@
-.form-section {
-    margin-left: 30%;
-    margin-right: 30%;
-    margin-top: 5%;
-    -webkit-box-shadow: 0px 0px 30px -6px rgba(92, 112, 102, 1);
-    -moz-box-shadow: 0px 0px 30px -6px rgba(92, 112, 102, 1);
-    box-shadow: 0px 0px 30px -6px rgba(92, 112, 102, 1);
-    border-radius: 10px;
-    border: 0px solid;
-    background-color: rgb(213, 231, 216);
-    .field {
-        margin-right: 150px;
-        margin-left: 150px;
-    }
-    .buttons {
-        width: 100%;
+.form-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: cursive;
+    .image-container {
+        flex: 1;
         display: flex;
-        align-items: center;
-        padding: 10px 0;
-        justify-content: center;
-        border-top: 1px solid var(--surface-border);
-    }
-}
+        align-items: end;
+        justify-content: end;
+        img {
+            display: block;
+            max-height: 550px;
+            border-radius: 10px;
+            border: 0px solid;
+          }
+      }
+
+      .form-section {
+        flex: 1;
+        -webkit-box-shadow: 0px 0px 30px 0px rgba(92, 112, 102, 1);
+        -moz-box-shadow: 0px 0px 30px  rgba(92, 112, 102, 1);
+        box-shadow: 0px 0px 30px 0px rgba(92, 112, 102, 1);
+        border-radius: 10px;
+        border: 0px solid;
+        margin-right:15%;
+        height: 550px;
+        width:100%;
+        background-color: rgb(255, 255, 255);
+        .field {
+            margin-right: 10px;
+            margin-left: 10px;
+
+        }
+        .buttons {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        img{
+            border-radius: 10px;
+            margin-left:10px;
+        }
+      }
+      
+  }
+  
+  
+  
+
+
+  
