--- a/TravelPics.UI/src/styles/primeng-overwrites/typography.scss
+++ b/TravelPics.UI/src/styles/primeng-overwrites/typography.scss
@@ -15,3 +15,7 @@
   ::ng-deep .p-galleria .p-galleria-item-nav .p-galleria-item-next-icon {
     font-size: 1rem !important;
   }
+
+  ::ng-deep .p-inputtext{
+    border-radius:10px;
+  }
