--- a/TravelPics.UI/src/app/page-not-found/page-not-found.component.html
+++ b/TravelPics.UI/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,10 @@
-<p>page-not-found works!</p>
+<div class="main">
+    <div class="invalid">
+        <span class="green">4</span>
+        <span class="blue">0</span>
+        <span class="green">4</span>
+    </div>
+
+    <p class="message">The page seems to be missing </p>
+    <h4 class="uri" *ngIf="!!pageUri">/{{pageUri}} </h4>
+</div>
