--- a/TravelPics.UI/src/app/auth/login/login.component.html
+++ b/TravelPics.UI/src/app/auth/login/login.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="form-container mt-7">
+<div class="form-container mt-7 mb-6">
     <div class="image-container">
         <img src="../../../assets/images/loginbg.jpeg" alt="background">
     </div>
@@ -43,4 +43,6 @@
         </form>
     </div>
   </div>
+  <travelpics-footer></travelpics-footer>
+
   
