--- a/TravelPics.UI/src/app/page-not-found/page-not-found.component.scss
+++ b/TravelPics.UI/src/app/page-not-found/page-not-found.component.scss
@@ -14,11 +14,11 @@
 }
 
 .blue {
-    color: #0e4c90;
+    color: var(--surface-500);
 }
 
 .green {
-    color: #5ab947
+    color: var(--primary-color);
 }
 
 .message {
