--- a/TravelPics.UI/src/app/user/register/register.component.html
+++ b/TravelPics.UI/src/app/user/register/register.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="form-container mt-6">
+<div class="form-container mt-6 mb-6">
     <div class="image-container">
         <img src="../../../assets/images/registerbg.jpg" alt="background">
     </div>
@@ -93,4 +93,5 @@
         </form>
     </div>
   </div>
-  
+  <travelpics-footer></travelpics-footer>
+
