--- a/TravelPics.UI/src/app/navigation/navigation/navigation.component.html
+++ b/TravelPics.UI/src/app/navigation/navigation/navigation.component.html
@@ -17,3 +17,8 @@
         <router-outlet></router-outlet>
     </div>
 </div>
+<div class="col-offset-2 col-12 md:col-10 p-0">
+    <travelpics-footer></travelpics-footer>
+</div>
+
+
