--- a/TravelPics.UI/src/app/navigation/navigation/navigation.component.scss
+++ b/TravelPics.UI/src/app/navigation/navigation/navigation.component.scss
@@ -1,5 +1,5 @@
 .navigation-menu-content{
-    height: 100%;
+    min-height: 100vh;
     margin:0 auto;
     position: relative; 
 
@@ -32,11 +32,5 @@
         padding: 0;
         z-index: 0;
         height:100%;
-    }
-    .content-area{
-        //         background-image: url('../../../assets/images/background.jpg?v=1');
-        // background-size: cover;
-        // background-position: center;
-
     }
 }
