--- a/TravelPics.UI/src/app/page-not-found/page-not-found.component.html
+++ b/TravelPics.UI/src/app/page-not-found/page-not-found.component.html
@@ -5,6 +5,6 @@
         <span class="green">4</span>
     </div>
 
-    <p class="message">The page seems to be missing </p>
-    <h4 class="uri" *ngIf="!!pageUri">/{{pageUri}} </h4>
+    <p class="message">The page seems to be missing for route:</p>
+    <h4 class="uri" *ngIf="!!pageUri">{{pageUri}} </h4>
 </div>
