update register-edit profiles and add validations

--- a/TravelPics.UI/src/app/auth/login/login.component.html
+++ b/TravelPics.UI/src/app/auth/login/login.component.html
@@ -10,8 +10,8 @@
             <div class="flex align-items-center justify-content-center">
                 <h2><i>Welcome</i></h2>
             </div>
-            <div class="flex align-items-center justify-content-center mb-4">
-                <img src="../../../assets/images/avatar.png" alt="avatar" style="width:100px;">
+            <div class="flex align-items-center justify-content-center">
+                <img src="../../../assets/images/avatar.png" alt="avatar" style="width:80px;">
             </div>
             <div *ngIf="errorMessage !== ''" class="flex align-items-center justify-content-center">
                 <p style="font-size:15px; color:red;">{{errorMessage}}</p>
