--- a/TravelPics.UI/src/app/post/my-posts/my-posts.component.html
+++ b/TravelPics.UI/src/app/post/my-posts/my-posts.component.html
@@ -1,8 +1,8 @@
 <travelpics-loader class="mt-12" [isLoading]="isLoading" [loadingMessage]="'Loading Personal Posts'"></travelpics-loader>
-<div class="col-12 md:col-12 flex flex-column mt-4 mb-4">
+<div *ngIf="posts.length > 0" class="col-12 md:col-12 flex flex-column mt-4 mb-4">
     <div *ngFor="let post of posts">
         <travelpics-post-item [getImageUrl]="getImageUrl" [loggedInUser]="loggedInUser" [post]="post" [responsiveOptions]="responsiveOptions"></travelpics-post-item>
     </div>
 </div>
-
+<travelpics-no-posts *ngIf="posts.length == 0 && !isLoading" [message]="'You haven\'t posted yet.'"></travelpics-no-posts>
   
