--- a/TravelPics.UI/src/app/user/register/register.component.html
+++ b/TravelPics.UI/src/app/user/register/register.component.html
@@ -10,8 +10,11 @@
             <div class="flex align-items-center justify-content-center">
                 <h2><i>Register new user</i></h2>
             </div>
-            <div class="flex align-items-center justify-content-center mb-4">
-                <img src="../../../assets/images/sign-up.png" alt="sign-up" style="width:100px;">
+            <div class="flex align-items-center justify-content-center ">
+                <img src="../../../assets/images/sign-up.png" alt="sign-up" style="width:70px;">
+            </div>
+            <div *ngIf="errorMessage !== ''" class="flex align-items-center justify-content-center">
+                <p style="font-size:15px; color:red;">{{errorMessage}}</p>
             </div>
             <div class="grid mr-2 ml-2">
                 <div class="col-12 md:col-6">
@@ -63,7 +66,7 @@
                     </div>
                 </div>
             </div>
-            <div class="grid mr-2 ml-2 h-6rem">
+            <div class="grid mr-2 ml-2">
                 <div class="col-12 md:col-6">
                     <div class="field">
                         <label for="password" class="col-12  required-label">Password:</label>
@@ -88,7 +91,7 @@
                 </div>
             </div>
             <div class="buttons mb-4">
-                <button [disabled]="!registerForm.valid" pButton pRipple type="submit" label="Register" class="p-button-raised p-button-primary"></button>
+                <button [disabled]="!registerForm.valid || registerForm.controls['password'].value !== registerForm.controls['passwordConfirm'].value" pButton pRipple type="submit" label="Register" class="p-button-raised p-button-primary"></button>
             </div>
         </form>
     </div>
