--- a/TravelPics.UI/src/app/page-not-found/page-not-found.component.html
+++ b/TravelPics.UI/src/app/page-not-found/page-not-found.component.html
@@ -1,7 +1,7 @@
 <div class="main">
     <div class="invalid">
         <span class="green">4</span>
-        <span class="blue">0</span>
+        <span class="surface">0</span>
         <span class="green">4</span>
     </div>
 
