Update register and login page sizes

--- a/TravelPics.UI/src/app/auth/login/login.component.html
+++ b/TravelPics.UI/src/app/auth/login/login.component.html
@@ -1,10 +1,8 @@
-
-
-<div class="form-container mt-7 mb-6">
+<div class="form-container">
     <div class="image-container">
         <img src="../../../assets/images/loginbg.jpeg" alt="background">
     </div>
-      
+
     <div class="form-section">
         <form [formGroup]="loginForm" (ngSubmit)="login()" class="flex flex-column">
             <div class="flex align-items-center justify-content-center">
@@ -42,7 +40,5 @@
             </div>
         </form>
     </div>
-  </div>
-  <travelpics-footer></travelpics-footer>
-
-  
+</div>
+<travelpics-footer></travelpics-footer>
