--- a/TravelPics.UI/src/app/auth/login/login.component.scss
+++ b/TravelPics.UI/src/app/auth/login/login.component.scss
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: center;
     font-family: cursive;
+    height: 100%;
     .image-container {
         flex: 1;
         display: flex;
@@ -14,24 +15,22 @@
             max-height: 500px;
             border-radius: 10px;
             border: 0px solid;
-          }
-      }
-
-      .form-section {
+        }
+    }
+    .form-section {
         flex: 1;
         -webkit-box-shadow: 0px 0px 30px 0px rgba(92, 112, 102, 1);
-        -moz-box-shadow: 0px 0px 30px  rgba(92, 112, 102, 1);
+        -moz-box-shadow: 0px 0px 30px rgba(92, 112, 102, 1);
         box-shadow: 0px 0px 30px 0px rgba(92, 112, 102, 1);
         border-radius: 10px;
         border: 0px solid;
-        margin-right:20%;
+        margin-right: 20%;
         max-width: 500px;
         height: 500px;
         background-color: rgb(255, 255, 255);
         .field {
             margin-right: 50px;
             margin-left: 50px;
-
         }
         .buttons {
             width: 100%;
@@ -39,19 +38,12 @@
             align-items: center;
             justify-content: center;
         }
-        img{
+        img {
             -webkit-box-shadow: 0px 0px 30px 0px rgba(92, 112, 102, 1);
-            -moz-box-shadow: 0px 0px 30px  rgba(92, 112, 102, 1);
+            -moz-box-shadow: 0px 0px 30px rgba(92, 112, 102, 1);
             box-shadow: 0px 0px 30px 0px rgba(92, 112, 102, 1);
             border-radius: 10px;
             border: 0px solid;
         }
-      }
-      
-  }
-  
-  
-  
-
-
-  
+    }
+}
