--- a/TravelPics.UI/src/app/user/register/register.component.scss
+++ b/TravelPics.UI/src/app/user/register/register.component.scss
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: center;
     font-family: cursive;
+    height: 100%;
     .image-container {
         flex: 1;
         display: flex;
@@ -13,24 +14,22 @@
             max-height: 550px;
             border-radius: 10px;
             border: 0px solid;
-          }
-      }
-
-      .form-section {
+        }
+    }
+    .form-section {
         flex: 1;
         -webkit-box-shadow: 0px 0px 30px 0px rgba(92, 112, 102, 1);
-        -moz-box-shadow: 0px 0px 30px  rgba(92, 112, 102, 1);
+        -moz-box-shadow: 0px 0px 30px rgba(92, 112, 102, 1);
         box-shadow: 0px 0px 30px 0px rgba(92, 112, 102, 1);
         border-radius: 10px;
         border: 0px solid;
-        margin-right:15%;
+        margin-right: 15%;
         height: 550px;
-        width:100%;
+        width: 100%;
         background-color: rgb(255, 255, 255);
         .field {
             margin-right: 10px;
             margin-left: 10px;
-
         }
         .buttons {
             width: 100%;
@@ -38,16 +37,9 @@
             align-items: center;
             justify-content: center;
         }
-        img{
+        img {
             border-radius: 10px;
-            margin-left:10px;
+            margin-left: 10px;
         }
-      }
-      
-  }
-  
-  
-  
-
-
-  
+    }
+}
